--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@
 plugins {
     id 'org.spongepowered.plugin' version '0.8.1'
     id 'java'
-    id "com.qixalite.spongestart" version "1.6.2"
+    id "com.qixalite.spongestart2" version '3.2.3'
 }
 
 group 'io.github.zerthick'
-version '1.1.0'
+version '1.2.0'
 
 repositories {
     mavenCentral()
@@ -35,10 +35,7 @@ repositories {
 }
 
 spongestart{
-    eula true
-
     minecraft '1.12.2'
-    type 'stable'
 }
 
 dependencies {
